pusblish my resume

--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -6,17 +6,24 @@ title: My Resume English
 description: My resume
 ---
 
-Profile
----  
----
-- Taotao.Li, Male, 1991
-- Bachelor, Beijing University of Posts and Telecommunications, Automation
+>
+- Taotao.Li, Male, 1991, Beijing University of Posts and Telecommunications
 - Blog：[http://litaotao.github.io](http://litaotao.github.io)
 - Github: [http://github.com/litaotao](http://github.com/litaotao)
 - Linkedin: [https://www.linkedin.com/in/taotaoli](https://www.linkedin.com/in/taotaoli)
 - Position：Quant Engineer
-- Phone, WeChat：18202171279  
 - Email：taotao.engineer#gmail.com
+
+
+Faith and Goal
+---  
+---
+
+- Be outstanding in Fintech industry;
+- Less is more, simple but sound;
+- Be on the top 20%, serve the 80%;
+- Talk is cheap, make the plan and do it；
+
 
 Experience
 ---  
@@ -24,15 +31,19 @@ Experience
 
 ### [DataYes](http://www.datayes.com/#/home) ( 11.2015 ~ )
 
-- #### [UQER](uqer.io)
-Futures backtesting framework, including market data ETL, strategy research, backtesting and simulation in real-time;     
+- #### UQER | Quant Developer
+>
+Design and make futures backtesting framework, including data ETL, strategy research, backtesting, live trading and paper trading;
 Quantitative strategy research and building;
-Design, build and deploy finance data computing platform on Spark;
+Design, build and deploy high-frequency data computing platform on Spark;
+Organize quantitative library, published 10% of all the content;
+Assist operation and sales team, visit ~5 clients per month;
 
 
 ### [Glow](http://www.glowing.com/) ( 06.2015 ~ 11.2015 )
 
 - #### Data Engineer
+>
 Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report;   
 Assist building A/B test service and result reporting;   
 Using looker to building metrics dashboard.
@@ -40,29 +51,28 @@ Using looker to building metrics dashboard.
 
 ### [DataYes](http://www.datayes.com/#/home) ( 04.2014 ~ 06.2015 )
 
-- ### [Strategy Commuity](https://uqer.io/community/list) 
-Community is the room attached with the online strategy research platform, aiming at offering a platform where quants can share strategies and communicate. I am the server developer of the community.    
+- ### Strategy Commuity
+>
+I am the server developer of the uqer community.    
 
 
-- #### [DataYes Credit Rating System](http://www.datayes.com/#/product?state=rating)
-Rating is a product serving for domestic small comanies. I was responsible for the backend server of this credit system. Using the agile method to organize the developing roadmap, I boosted up the effciency of development. Svn, Visio, Confluence, Jira were most frequently used tools. And Python, Flask, NoSql were the main technology stack in this project. Besides, as a fresh man in financial, I learned some specialized knowledge and analytic methods about enterprise credit. What's fortunately was that I received the best new staff in Q2.    
+- #### DataYes Credit Rating System
+>
+Rating is a product serving for domestic small comanies. I was responsible for the backend server of this credit system. It took me 2 months from project start to deploy it on production.
 
 Skill
 ---  
 ---
 
-- OS：Linux，Mac，Windows
-- Program：Python/IPython，C，C++，Shell，Erlang，JS，HTML，CSS
-- Framework：Spark, Hadoop, Flask，Restful，OTP
-- Database：Mongo，MySQL，PostgreSQL, Redshift, Amazon S3, Redis
-- Tool：Nginx，Vagrant, Visio，Gliffy，Phabricator
-- Direction：Quantitative investing, Machine Learning，Recommendation
-- Management：Svn，Git，Markdown，JIRA，Jenkins，Confluence
+- Skill: Linux, Python, C/C++, Shell, JS, HTML, CSS
+- Framework: Spark, Hadoop, Flask, Restful, Mongo, MySQL, S3, Redis, Nginx
+- Tools: Svn, Git, Markdown, JIRA, Jenkins, Confluence
+- Industry: Fin-tech, Big data
 
 Share
 ---  
 ---
-- [Spark Fire](../files/spark-fire.ppt) 
+- [Spark Fire](../files/spark-fire.ppt)
 - [Introduing Spark](http://litaotao.github.io/files/introduing_spark.pdf)
 - [Python for Finance, Quant Topic](http://litaotao.github.io/files/python-quant-uqer.pdf)
 
@@ -88,12 +98,6 @@ Honour
 - [DataYes] CEO Special Award of Q2, 2016 [2 people earned, about 260 people in total];
 
 
-Statement
----
----    
-Loving computer science, keeping in touch with cutting-edge technologies; easy-going, do well in team work; with wide interests, reading, model plane and model car; looking forward to improve in every possible way, so sometimes I'll assist opeartion team and sales team.
-
-
 Thanks
 ---  
 ---
@@ -105,5 +109,6 @@ PDF
 ---  
 ---
 
-Thanks, to download as pdf, please click [litaotao-developer-cn](../files/litaotao-developer-en.pdf)     
-For Chinese version resume：[resume_cn](../resume)
+Resume CN PDF: [My Resume CN PDF](../files/litaotao-quant-cn.pdf)    
+Resume EN PDF: [My Resume EN PDF](../files/litaotao-quant-en.pdf)     
+Resume CN WEB: [My Resume CN WEB](../resume)
