--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -2,7 +2,7 @@
 category: work
 published: true
 layout: post
-title: My Resume CN 
+title: My Resume CN
 description: My resume
 ---
 
@@ -22,16 +22,16 @@ description: My resume
 - 在 Fintech 领域独当一面；
 - 删繁就简，简约而不简单；
 - 向 TOP 20 看齐，服务好 80% 的目标客户；
-- 少说废话，多干实事，事后留痕；
+- 少说废话，多干实事；
 
 
 工作经历
 ---  
 ---
 
-### [通联数据](http://www.datayes.com/#/home) ( 2015年12月 ~  )
+### [通联数据](}http://www.datayes.com/#/home) ( 2015年12月 ~  )
 
-- #### [优矿 | 量化工程师](uqer.io)
+- #### 优矿 | 量化工程师
 
 >
 设计，开发股指，商品期货回测框架，包括行情数据 ETL，策略研究，回测，分析，模拟交易，实盘交易；      
@@ -39,24 +39,21 @@ description: My resume
 基于 Spark 的金融大数据分布式计算平台设计，研发，部署；支撑百GB级数据分析；    
 协助团队完成专业量化知识库编写；覆盖股票，期货期权等专业量化面，个人负责其中10%的内容；      
 配合运营，销售团队完成相关工作，每月拜访客户 5家左右；         
-量化知识库内容设计，参与部分内容编写；       
-
 
 ### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
 
 - #### 数据工程师
-
 >
 负责应用后台数据 ETL，App Metrics 计算，分析，报告；协助开发 A/B test 服务及结果分析报告；APP 服务端开发。
 
 ### [通联数据](http://www.datayes.com/#/home) ( 2014年4月 ~ 2015年6月 )
 
-- #### [优矿社区 | 后台工程师](https://uqer.io/community/list)
+- #### 优矿社区 | 后台工程师
 
 >   
 负责社区后端开发，与产品经理，前端开发共同讨论产品实现方案。提前、按时完成功能开发和测试，以 SOA 方式设计产品模块，尽力保证产品后期可扩展性，高可用性。
 
-- #### [通联信用评级 | 后台工程师](http://www.datayes.com/#/product?state=rating)
+- #### 通联信用评级 | 后台工程师
 
 >
 信评是一个针对国内中小微企业的信用评分产品。个人负责后端开发，从立项到生产耗时 ～2 月。
@@ -113,4 +110,4 @@ description: My resume
 
 中文简历：[My Resume CN PDF](../files/litaotao-quant-cn.pdf)    
 英文简历：[My Resume EN PDF](../files/litaotao-quant-en.pdf)     
-英文简历：[My Resume EN Web](../resume-en)
+英文简历：[My Resume EN WEB](../resume-en)
