update pdf resume

--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -33,7 +33,7 @@ Experience
 
 - #### UQER | Quant Developer
 >
-Design and make futures backtesting framework, including data ETL, strategy research, backtesting, live trading and paper trading;
+Design and make futures backtesting framework, including ETL, strategy research, backtesting, live trading and paper trading;
 Quantitative strategy research and building;
 Design, build and deploy high-frequency data computing platform on Spark;
 Organize quantitative library, published 10% of all the content;
@@ -46,7 +46,7 @@ Assist operation and sales team, visit ~5 clients per month;
 >
 Develop and maintain Apps' metrics report, including data ETL, calculating, storage and report;   
 Assist building A/B test service and result reporting;   
-Using looker to building metrics dashboard.
+Using looker to building metrics dashboard;
 
 
 ### [DataYes](http://www.datayes.com/#/home) ( 04.2014 ~ 06.2015 )
