--- a/_posts/work/2014-11-08-resume-en.md
+++ b/_posts/work/2014-11-08-resume-en.md
@@ -34,11 +34,11 @@ Experience
 - #### UQER | Quant Developer
 >
 Design and make futures backtesting framework, including ETL, strategy research, backtesting, live trading and paper trading;
-Quantitative strategy research and building;
 Design, build and deploy high-frequency data computing platform on Spark;
 Organize quantitative library, published 10% of all the content;
 Assist operation and sales team, visit ~5 clients per month;
-
+Singal construction, research, backtesting and attribution;
+Quantitative strategy research and building;
 
 ### [Glow](http://www.glowing.com/) ( 06.2015 ~ 11.2015 )
 
@@ -67,7 +67,8 @@ Skill
 - Skill: Linux, Python, C/C++, Shell, JS, HTML, CSS
 - Framework: Spark, Hadoop, Flask, Restful, Mongo, MySQL, S3, Redis, Nginx
 - Tools: Svn, Git, Markdown, JIRA, Jenkins, Confluence
-- Industry: Fin-tech, Big data
+- Industry: Fin-tech, Big data，Wealth Management, Investing Research
+- Finance: Singal research, Quant research, Industry research
 
 Share
 ---  
