--- a/_posts/work/2014-11-08-resume.md
+++ b/_posts/work/2014-11-08-resume.md
@@ -34,11 +34,12 @@ description: My resume
 - #### 优矿 | 量化工程师
 
 >
-设计，开发股指，商品期货回测框架，包括行情数据 ETL，策略研究，回测，分析，模拟交易，实盘交易；      
-量化策略研究及开发；定期挖掘，研究，验证策略思路，一切以实盘为导向；    
+设计，开发股指，商品期货回测框架，包括行情数据 ETL，策略研究，回测，分析，模拟交易，实盘交易；         
 基于 Spark 的金融大数据分布式计算平台设计，研发，部署；支撑百GB级数据分析；    
 协助团队完成专业量化知识库编写；覆盖股票，期货期权等专业量化面，个人负责其中10%的内容；      
 配合运营，销售团队完成相关工作，每月拜访客户 5家左右；         
+信号构建，研究，回测及归因分析；
+量化策略研究，开发，回测及归因分析；
 
 ### [Glow](http://www.glowing.com/) ( 2015年6月 ~ 2015年11月 )
 
@@ -65,7 +66,8 @@ description: My resume
 - 技术: Linux, Python, C/C++, Shell, JS, HTML, CSS
 - 框架: Spark, Hadoop, Flask, Restful, Mongo, MySQL, S3, Redis, Nginx
 - 工具: Svn, Git, Markdown, JIRA, Jenkins, Confluence
-- 行业: 互联网金融, 大数据
+- 行业: 互联网金融, 大数据，资产管理，投资研究
+- 金融: 信号研究，策略研究，行业研究
 
 
 技术分享  
